イギリスNFの仮追加

--- a/localisation/_geacps_autonomous_states_l_english.yml
+++ b/localisation/_geacps_autonomous_states_l_english.yml
@@ -30,6 +30,10 @@
  warlord:0 "中華軍閥"
  autonomous_province:0 "自治省"
  
+#アメリカ
+ us_commonwealth:0 "米国自治連邦区"
+ us_territory:0 "準州"
+ 
 #ソ連
  soviet_autonomous_republic:0 "自治共和国"
  soviet_member_republic:0 "構成共和国"
