--- a/localisation/_geacps_countries_colony_l_english.yml
+++ b/localisation/_geacps_countries_colony_l_english.yml
@@ -60,6 +60,9 @@
  MAD_FRA_overseas_territory:0 "$OVERLORDADJ$領マダガスカル及び属領"
  MAD_FRA_overseas_territory_DEF:0 "$OVERLORDADJ$領マダガスカル及び属領"
  
+#アメリカ領
+ 
+ 
 #ベルギー領
  COG_BEL_dominion:0 "コンゴ独立国"
  COG_BEL_dominion_DEF:0 "コンゴ独立国"
@@ -110,6 +113,14 @@
  COUNTRY_imperial_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  COUNTRY_imperial_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  COUNTRY_imperial_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ 
+ COUNTRY_us_commonwealth:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$自治連邦区"
+ COUNTRY_us_commonwealth_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$自治連邦区"
+ COUNTRY_us_commonwealth_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$自治連邦区"
+ 
+ COUNTRY_us_territory:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$準州"
+ COUNTRY_us_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$準州"
+ COUNTRY_us_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  
  COUNTRY_soviet_member_federal_republic:0 "$NONIDEOLOGYADJ$・ソビエト連邦社会主義共和国"
  COUNTRY_soviet_member_federal_republic_DEF:0 "$NONIDEOLOGYADJ$・ソビエト連邦社会主義共和国"
