--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1269,6 +1269,11 @@
  OCC_DEF:0 "オクシタニア共和国"
  OCC_ADJ:0 "オクシタニア"
  
+#アメリカ
+ ALS:0 "アラスカ共和国"
+ ALS_DEF:0 "アラスカ共和国"
+ ALS_ADJ:0 "アラスカ"
+ 
 #旧ソビエト諸国
  ARM:0 "アルメニア共和国"
  ARM_DEF:0 "アルメニア共和国"
