--- a/localisation/_geacps_bookmarks_l_english.yml
+++ b/localisation/_geacps_bookmarks_l_english.yml
@@ -4,7 +4,7 @@
  THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
  
  THE_CHAOS_OF_EUROPE_NAME:0 "混沌の欧州"
- THE_CHAOS_OF_EUROPE_DESC:0 ""
+ THE_CHAOS_OF_EUROPE_DESC:0 "欧州は混沌に包まれている...先の大戦では拡大化した枢軸の撲滅に成功したものの、その後の新秩序を保つ事には失敗した。後に「冷戦」と呼ばれるこの構造は、イギリスとフランス、ロシアの間に暗い影を落としている。かつての支配者であるドイツは大きく三つに分割され、その同盟国だったイタリアでは、南部がその支配から脱した。バルト海のシュチェチンからアドリア海のトリエステの間でヨーロッパは大きく二分され、さらに一方ではイギリスとフランスの対立が激化しようとしている。"
  
 #各国の説明
  ENG_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
