--- a/localisation/_geacps_countries_l_english.yml
+++ b/localisation/_geacps_countries_l_english.yml
@@ -840,6 +840,8 @@
  
  RUS_republic:0 "ロシア共和国"
  RUS_republic_DEF:0 "ロシア共和国"
+ RUS_GREEN_empire:0 "緑ロシア帝国"
+ RUS_GREEN_empire_DEF:0 "緑ロシア帝国"
  
  SAR_republic:0 "ザール共和国"
  SAR_republic_DEF:0 "ザール共和国"
