政党支持率変化

--- a/localisation/_geacps_parties_l_english.yml
+++ b/localisation/_geacps_parties_l_english.yml
@@ -55,7 +55,7 @@
  SIA_reactionary_authoritarianism_party:0 "人民党"
  SIA_national_populism_party:0 "仏法主義党"
  
-#英連邦
+#ウェストミンスター憲章機構
  ENG_GBR_total_socialism_party:0 "グレートブリテン共産党"
  ENG_GBR_radical_socialism_party:0 "グレートブリテン社会党"
  ENG_GBR_social_democracy_party:0 "労働党"
@@ -77,17 +77,6 @@
  NZL_national_populism_party:0 "ニュージーランド軍団"
  NZL_authoritative_democracy_party:0 "ニュージーランド国民党"
  
- WGR_total_socialism_party:0 "ドイツ共産党"
- WGR_radical_socialism_party:0 "ドイツ共産党"
- WGR_social_democracy_party:0 "ドイツ社会民主党"
- WGR_social_liberalism_party:0 "自由民主党"
- WGR_classical_liberalism_party:0 "民主人民党"
- WGR_liberal_conservatism_party:0 "ドイツキリスト教民主同盟"
- WGR_social_conservatism_party:0 "キリスト教社会同盟"
- WGR_authoritative_democracy_party:0 "ドイツ党"
- WGR_reactionary_authoritarianism_party:0 "中央党"
- WGR_national_populism_party:0 "経済再生連合"
- 
 #西欧同盟
  FRA_total_socialism_party:0 "フランス共産党"
  FRA_radical_socialism_party:0 "急進党"
@@ -99,8 +88,6 @@
  FRA_authoritative_democracy_party:0 "人民共和派運動"
  FRA_reactionary_authoritarianism_party:0 "アクション・フランセーズ"
  FRA_national_populism_party:0 "フランス人民連合"
- 
- SGR_liberal_conservatism_party:0 "ドイツキリスト教民主同盟"
  
  ITA_total_socialism_party:0 "イタリア共産党"
  ITA_radical_socialism_party:0 "イタリア社会党"
@@ -150,17 +137,6 @@
  CZE_authoritative_democracy_party:0 "国民民主党"
  CZE_reactionary_authoritarianism_party:0 "国民民主党"
  CZE_national_populism_party:0 "国民統一党"
- 
- DDR_total_socialism_party:0 "ドイツ社会主義統一党"
- DDR_radical_socialism_party:0 "自由ドイツ労働総同盟"
- DDR_social_democracy_party:0 "ドイツ社会主義労働者党"
- DDR_social_liberalism_party:0 "自由民主党"
- DDR_classical_liberalism_party:0 "ドイツ自由民主党"
- DDR_liberal_conservatism_party:0 "ドイツキリスト教民主同盟"
- DDR_social_conservatism_party:0 "キリスト教社会同盟"
- DDR_authoritative_democracy_party:0 "ドイツ党"
- DDR_reactionary_authoritarianism_party:0 "中央党"
- DDR_national_populism_party:0 "経済再生連合"
  
  HUN_total_socialism_party:0 "ハンガリー共産党"
  HUN_radical_socialism_party:0 "全国農民党"
@@ -231,6 +207,39 @@
  
 #ヨーロッパ
  BEL_social_democracy_party:0 "ベルギー社会党"
+ 
+ DDR_total_socialism_party:0 "ドイツ社会主義統一党"
+ DDR_radical_socialism_party:0 "自由ドイツ労働総同盟"
+ DDR_social_democracy_party:0 "ドイツ社会主義労働者党"
+ DDR_social_liberalism_party:0 "自由民主党"
+ DDR_classical_liberalism_party:0 "ドイツ自由民主党"
+ DDR_liberal_conservatism_party:0 "ドイツキリスト教民主同盟"
+ DDR_social_conservatism_party:0 "キリスト教社会同盟"
+ DDR_authoritative_democracy_party:0 "ドイツ党"
+ DDR_reactionary_authoritarianism_party:0 "中央党"
+ DDR_national_populism_party:0 "経済再生連合"
+ 
+ WGR_total_socialism_party:0 "ドイツ共産党"
+ WGR_radical_socialism_party:0 "ドイツ共産党"
+ WGR_social_democracy_party:0 "ドイツ社会民主党"
+ WGR_social_liberalism_party:0 "自由民主党"
+ WGR_classical_liberalism_party:0 "新ドイツ国家人民党"
+ WGR_liberal_conservatism_party:0 "ドイツキリスト教民主同盟"
+ WGR_social_conservatism_party:0 "キリスト教社会同盟"
+ WGR_authoritative_democracy_party:0 "ドイツ党"
+ WGR_reactionary_authoritarianism_party:0 "中央党"
+ WGR_national_populism_party:0 "ドイツ改革党"
+ 
+ SGR_total_socialism_party:0 "ドイツ共産党"
+ SGR_radical_socialism_party:0 "ドイツ共産党"
+ SGR_social_democracy_party:0 "ドイツ社会民主党"
+ SGR_social_liberalism_party:0 "自由民主党"
+ SGR_classical_liberalism_party:0 "民主人民党"
+ SGR_liberal_conservatism_party:0 "ドイツキリスト教民主同盟"
+ SGR_social_conservatism_party:0 "キリスト教社会同盟"
+ SGR_authoritative_democracy_party:0 "ドイツ党"
+ SGR_reactionary_authoritarianism_party:0 "中央党"
+ SGR_national_populism_party:0 "経済再生連合"
  
  SWE_total_socialism_party:0 "共産党"
  SWE_radical_socialism_party:0 "社会党"
