--- a/localisation/_geacps_parties_l_english.yml
+++ b/localisation/_geacps_parties_l_english.yml
@@ -198,12 +198,24 @@
  TUR_social_conservatism_party:0 "社会保守党"
  TUR_authoritative_democracy_party:0 "オスマン家"
  TUR_reactionary_authoritarianism_party:0 "オスマン家"
- TUR_national_populism_party:0 "ファシズム大国民議会"
+ TUR_national_populism_party:0 "トルコ軍"
  
  BAI_total_socialism_party:0 "社会革命党"
  BAI_liberal_conservatism_party:0 "立憲民主党"
  BAI_national_populism_party:0 "トランスバイカルファシスト党"
  BAI_authoritative_democracy_party:0 "コサック党"
+ 
+#中東
+ SAU_total_socialism_party:0 "諮問評議会"
+ SAU_radical_socialism_party:0 "諮問評議会"
+ SAU_social_democracy_party:0 "諮問評議会"
+ SAU_social_liberalism_party:0 "ムスリム同胞団"
+ SAU_classical_liberalism_party:0 "諮問評議会"
+ SAU_liberal_conservatism_party:0 "諮問評議会"
+ SAU_social_conservatism_party:0 "諮問評議会"
+ SAU_authoritative_democracy_party:0 "諮問評議会"
+ SAU_reactionary_authoritarianism_party:0 "サウード家"
+ SAU_national_populism_party:0 "諮問評議会"
  
 #ヨーロッパ
  BEL_social_democracy_party:0 "ベルギー社会党"
@@ -273,6 +285,17 @@
  PDG_authoritative_democracy_party:0 "全国自由党"
  PDG_reactionary_authoritarianism_party:0 "人民党"
  PDG_national_populism_party:0 "団体X"
+ 
+ SPR_total_socialism_party:0 "スペイン共産党"
+ SPR_radical_socialism_party:0 "サンディカリスト党"
+ SPR_social_democracy_party:0 "スペイン社会労働党"
+ SPR_social_liberalism_party:0 "共和党連合"
+ SPR_classical_liberalism_party:0 "スペイン農業党"
+ SPR_liberal_conservatism_party:0 "自由共和党"
+ SPR_social_conservatism_party:0 "旧ファランヘ党"
+ SPR_authoritative_democracy_party:0 "伝統主義派"
+ SPR_reactionary_authoritarianism_party:0 "伝統主義派"
+ SPR_national_populism_party:0 "新ファランヘ党"
  
 #新大陸
  CHL_social_liberalism_party:0 "急進党"
