--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -819,6 +819,10 @@
  PNG_DEF:0 "パプアニューギニア"
  PNG_ADJ:0 "パプアニューギニア"
  
+ SAM:0 "サモア"
+ SAM_DEF:0 "サモア"
+ SAM_ADJ:0 "サモア"
+ 
  SOL:0 "ソロモン諸島"
  SOL_DEF:0 "ソロモン諸島"
  SOL_ADJ:0 "ソロモン諸島"
@@ -1022,10 +1026,6 @@
  SAR_DEF:0 "ザール"
  SAR_ADJ:0 "ザール"
  
- SHN:0 "セントヘレナ"
- SHN_DEF:0 "セントヘレナ"
- SHN_ADJ:0 "セントヘレナ"
- 
  SIB:0 "シベリア"
  SIB_DEF:0 "シベリア"
  SIB_ADJ:0 "シベリア"
@@ -1217,6 +1217,10 @@
  CHR_DEF:0 "クリスマス島"
  CHR_ADJ:0 "クリスマス島"
  
+ COC:0 "ココス諸島"
+ COC_DEF:0 "ココス諸島"
+ COC_ADJ:0 "ココス諸島"
+ 
  COK:0 "クック諸島"
  COK_DEF:0 "クック諸島"
  COK_ADJ:0 "クック諸島"
@@ -1224,10 +1228,6 @@
  KIR:0 "キリバス"
  KIR_DEF:0 "キリバス"
  KIR_ADJ:0 "キリバス"
- 
- MHL:0 "マーシャル諸島"
- MHL_DEF:0 "マーシャル諸島"
- MHL_ADJ:0 "マーシャル諸島"
  
  NCL:0 "ニューカレドニア"
  NCL_DEF:0 "ニューカレドニア"
