ステートの整理

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -982,6 +982,10 @@
  DON_DEF:0 "ドン"
  DON_ADJ:0 "ドン"
  
+ FLN:0 "フランドル"
+ FLN_DEF:0 "フランドル"
+ FLN_ADJ:0 "フランドル"
+ 
  FRO:0 "フェロー諸島"
  FRO_DEF:0 "フェロー諸島"
  FRO_ADJ:0 "フェロー諸島"
@@ -1013,6 +1017,10 @@
  MNN:0 "マン島"
  MNN_DEF:0 "マン島"
  MNN_ADJ:0 "マン島"
+ 
+ MRV:0 "モラヴィア"
+ MRV_DEF:0 "モラヴィア"
+ MRV_ADJ:0 "モラヴィア"
  
  RHI:0 "ライン"
  RHI_DEF:0 "ライン"
@@ -1057,6 +1065,10 @@
  VNC:0 "ヴェネツィア"
  VNC_DEF:0 "ヴェネツィア"
  VNC_ADJ:0 "ヴェネツィア"
+ 
+ WLL:0 "ワロン"
+ WLL_DEF:0 "ワロン"
+ WLL_ADJ:0 "ワロン"
  
 #アフリカ
  COM:0 "コモロ"
