--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -68,7 +68,9 @@
  STATE_67:0 "ゴルヌィ・シロンスク"
  
  STATE_68:0 "ルブシュ"
+ STATE_69:0 "ウースチー"	#ドイツ語: アウシヒ
  STATE_73:0 "ザカルパッチャ"
+ STATE_74:0 "オパヴァ"	#ドイツ語: トロッパウ
  STATE_77:0 "南ドブロジャ"
  STATE_80:0 "チェルニウツィー"
  STATE_85:0 "ポモージェ"
@@ -558,3 +560,8 @@
  STATE_1113:0 "ムサンダム"
  STATE_1114:0 "マドハー"
  STATE_1115:0 "ソコトラ"
+ 
+ STATE_1121:0 "ヘプ"	#独語: エーガー
+ STATE_1122:0 "シュマヴァ"	#独語: ベーマーヴァルトガウ
+ STATE_1123:0 "ズノイモ"	#独語: ツナイム
+ STATE_1124:0 "北カタルーニャ"
