--- a/localisation/_geacps_bookmarks_l_english.yml
+++ b/localisation/_geacps_bookmarks_l_english.yml
@@ -7,7 +7,7 @@
  THE_CHAOS_OF_EUROPE_DESC:0 "欧州は混沌に包まれている...先の大戦では拡大化した枢軸の撲滅に成功したものの、その後の新秩序を保つ事には失敗した。後に「冷戦」と呼ばれるこの構造は、イギリスとフランス、ロシアの間に暗い影を落としている。かつての支配者であるドイツは大きく三つに分割され、その同盟国だったイタリアでは、南部がその支配から脱した。バルト海のシュチェチンからアドリア海のトリエステの間でヨーロッパは大きく二分され、さらに一方ではイギリスとフランスの対立が激化しようとしている。"
  
 #各国の説明
- ENG_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
+ ENG_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 "イギリスは辛うじて勝利を収めたものの、問題が山積しているのも事実である。隣国との関係悪化や鉄のカーテンを隔てた向こう側との関係、脱植民地化の加速等の問題に対して、クレメント・アトリー率いる労働党はどう対処するのだろうか...？"
  SPR_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
  FRA_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
  POL_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
