--- a/localisation/_geacps_parties_l_english.yml
+++ b/localisation/_geacps_parties_l_english.yml
@@ -56,6 +56,17 @@
  SIA_national_populism_party:0 "仏法主義党"
  
 #ウェストミンスター憲章機構
+ ENG_total_socialism_party:0 "グレートブリテン共産党"
+ ENG_radical_socialism_party:0 "グレートブリテン社会党"
+ ENG_social_democracy_party:0 "労働党"
+ ENG_social_liberalism_party:0 "自由党"
+ ENG_classical_liberalism_party:0 "保守党"
+ ENG_liberal_conservatism_party:0 "国民自由党"
+ ENG_social_conservatism_party:0 "独立労働党"
+ ENG_authoritative_democracy_party:0 "連合帝国党"
+ ENG_reactionary_authoritarianism_party:0 "ウィンザー朝"
+ ENG_national_populism_party:0 "帝国ファシスト連盟"
+ 
  ENG_GBR_total_socialism_party:0 "グレートブリテン共産党"
  ENG_GBR_radical_socialism_party:0 "グレートブリテン社会党"
  ENG_GBR_social_democracy_party:0 "労働党"
