--- a/localisation/geacps_ENG_l_english.yml
+++ b/localisation/geacps_ENG_l_english.yml
@@ -1,4 +1,5 @@
 ﻿l_english:
+#国家方針
  geacps_ENG_0:0 "第三次救済法案"
  geacps_ENG_1:0 "希望は消えず"
  geacps_ENG_2:0 "一部企業の民営化"
@@ -58,3 +59,8 @@
  geacps_ENG_56:0 ""
  geacps_ENG_75:0 "インフレ統制への注力"
  geacps_ENG_76:0 "国内産業の再編"
+ 
+#国民精神
+ ENG_from_the_cradle_to_the_grave:0 "ゆりかごから墓場まで"
+ ENG_nationalisation_of_key_industries:0 "基幹産業の国有化"
+ ENG_france-united_kingdom_relations:0 "英仏関係"
