--- a/localisation/geacps_FRA_l_english.yml
+++ b/localisation/geacps_FRA_l_english.yml
@@ -358,11 +358,11 @@
  GEACPS_NF_FRA_179_desc:0 "ソ連との戦争はもはや秒読みの段階に入っている。ならば我らが先に戦端を開き先制攻撃を行うのだ！"
  
 #国民精神
- GEACPS_IDEA_FRA_1:0 "ド・ゴール体制"
- GEACPS_IDEA_FRA_2:0 "国内情勢の不安"
- GEACPS_IDEA_FRA_3:0 "エラン・ヴィタール"
- GEACPS_IDEA_FRA_4:0 "グランダルメ"
- GEACPS_IDEA_FRA_5:0 "戦闘には負けたが、戦争に負けたわけではない"
+ FRA_de_gaulle_regime:0 "ド・ゴール体制"
+ FRA_fighting_france:0 "戦うフランス"
+ FRA_monet_plan:0 "モネ・プラン"
+ FRA_purge_against_the_collaboraturs:0 "コラボラトゥールに対する粛清"
+ FRA_our_dearest_enemy:0 "我々の最も親愛なる敵"
  
 #イベント
  GEACPS_france.1:0 "敗北の上の勝利"
