--- a/localisation/geacps_RUS_l_english.yml
+++ b/localisation/geacps_RUS_l_english.yml
@@ -59,3 +59,10 @@
  ship-borne_plane:0 "艦載機"
  battleship:0 "戦艦"
  Completed_large_ship:0 "完成された大型艦"
+
+#国民精神
+ RUS_general_directorate_of_state_security:0 "国家保安総局"
+ RUS_reigniting_the_ethnic_question:0 "民族問題の再燃"
+ RUS_federalism_in_turmoil:0 "連邦制の動揺"
+ RUS_victory_in_the_great_patriotic_war:0 "大祖国戦争に勝利"
+ RUS_defeat_in_the_far_east:0 "極東における敗北"
