いろいろ追加

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -869,6 +869,10 @@
  ETR_DEF:0 "東トルキスタン"
  ETR_ADJ:0 "東トルキスタン"
  
+ EZO:0 "蝦夷"
+ EZO_DEF:0 "蝦夷"
+ EZO_ADJ:0 "蝦夷"
+ 
  FNG:0 "福建"
  FNG_DEF:0 "福建"
  FNG_ADJ:0 "福建"
@@ -924,6 +928,10 @@
  PUD:0 "プドゥコーッタイ"
  PUD_DEF:0 "プドゥコーッタイ"
  PUD_ADJ:0 "プドゥコーッタイ"
+ 
+ RYU:0 "琉球"
+ RYU_DEF:0 "琉球"
+ RYU_ADJ:0 "琉球"
  
  SCH:0 "四川"
  SCH_DEF:0 "四川"
