--- a/localisation/_geacps_parties_l_english.yml
+++ b/localisation/_geacps_parties_l_english.yml
@@ -100,6 +100,28 @@
  FRA_reactionary_authoritarianism_party:0 "アクション・フランセーズ"
  FRA_national_populism_party:0 "フランス人民連合"
  
+ SAR_FRA_total_socialism_party:0 "ドイツ共産党"
+ SAR_FRA_radical_socialism_party:0 "ドイツ共産党"
+ SAR_FRA_social_democracy_party:0 "ザールラント社会民主党"
+ SAR_FRA_social_liberalism_party:0 "民主社会主義抗戦同盟"
+ SAR_FRA_classical_liberalism_party:0 "ザール民主党"
+ SAR_FRA_liberal_conservatism_party:0 "ザールラントキリスト教民主同盟"
+ SAR_FRA_social_conservatism_party:0 "民主社会主義抗戦同盟"
+ SAR_FRA_authoritative_democracy_party:0 "人民共和派運動"
+ SAR_FRA_reactionary_authoritarianism_party:0 "中央党"
+ SAR_FRA_national_populism_party:0 "経済再生連合"
+ 
+ RHI_FRA_total_socialism_party:0 "ドイツ共産党"
+ RHI_FRA_radical_socialism_party:0 "ドイツ共産党"
+ RHI_FRA_social_democracy_party:0 "ラインラント社会民主党"
+ RHI_FRA_social_liberalism_party:0 "民主社会主義抗戦同盟"
+ RHI_FRA_classical_liberalism_party:0 "社会民主共和党同盟"
+ RHI_FRA_liberal_conservatism_party:0 "ラインラントキリスト教民主同盟"
+ RHI_FRA_social_conservatism_party:0 "民主社会主義抗戦同盟"
+ RHI_FRA_authoritative_democracy_party:0 "人民共和派運動"
+ RHI_FRA_reactionary_authoritarianism_party:0 "中央党"
+ RHI_FRA_national_populism_party:0 "経済再生連合"
+ 
  ITA_total_socialism_party:0 "イタリア共産党"
  ITA_radical_socialism_party:0 "イタリア社会党"
  ITA_social_democracy_party:0 "労働民主党"
