--- a/localisation/geacps_SGR_l_english.yml
+++ b/localisation/geacps_SGR_l_english.yml
@@ -2,7 +2,6 @@
 #国家方針
  
 #国民精神
- GEACPS_IDEA_SGR_1:0 "ハンブルク条約"
- GEACPS_IDEA_SGR_2:0 "敗戦の記憶"
- GEACPS_IDEA_SGR_3:0 "ナチスの弾圧"
- GEACPS_IDEA_SGR_4:0 "冷戦の最前線"
+ SGR_the_berlin_declaration:0 "ベルリン宣言"
+ SGR_potsdam_agreement:0 "ポツダム協定"
+ SGR_denazification:0 "非ナチ化"
