--- a/localisation/geacps_DDR_l_english.yml
+++ b/localisation/geacps_DDR_l_english.yml
@@ -2,9 +2,9 @@
 #国家方針
  
 #国民精神
- GEACPS_IDEA_DDR_1:0 "ハンブルク条約"
- GEACPS_IDEA_DDR_2:0 "敗戦の記憶"
- GEACPS_IDEA_DDR_3:0 "ナチスの弾圧"
- GEACPS_IDEA_DDR_4:0 "東欧経済における優等生"
- GEACPS_IDEA_DDR_5:0 "国家保安省"
- GEACPS_IDEA_DDR_6:0 "冷戦の最前線"
+ DDR_the_berlin_declaration:0 "ベルリン宣言"
+ DDR_potsdam_agreement:0 "ポツダム協定"
+ DDR_denazification:0 "非ナチ化"
+ DDR_hegemonic_party_system:0 "ヘゲモニー政党制"
+ DDR_stasi:0 "シュタージ"
+ DDR_the_east-west_german_wall:0 "東西ドイツの壁"
