--- a/localisation/geacps_WGR_l_english.yml
+++ b/localisation/geacps_WGR_l_english.yml
@@ -2,9 +2,8 @@
 #国家方針
  
 #国民精神
- GEACPS_IDEA_WGR_1:0 "ハンブルク条約"
- GEACPS_IDEA_WGR_2:0 "敗戦の記憶"
- GEACPS_IDEA_WGR_3:0 "ナチスの弾圧"
- GEACPS_IDEA_WGR_4:0 "帝政復興"
- GEACPS_IDEA_WGR_5:0 "赤い海に浮かぶ帝国の島"
- GEACPS_IDEA_WGR_6:0 "冷戦の最前線"
+ WGR_the_berlin_declaration:0 "ベルリン宣言"
+ WGR_potsdam_agreement:0 "ポツダム協定"
+ WGR_denazification:0 "非ナチ化"
+ WGR_republic_of_Bonn:0 "ボン帝国"
+ WGR_the_east-west_german_wall:0 "東西ドイツの壁"
