--- a/localisation/_geacps_parties_l_english.yml
+++ b/localisation/_geacps_parties_l_english.yml
@@ -100,27 +100,27 @@
  FRA_reactionary_authoritarianism_party:0 "アクション・フランセーズ"
  FRA_national_populism_party:0 "フランス人民連合"
  
- SAR_FRA_total_socialism_party:0 "ドイツ共産党"
- SAR_FRA_radical_socialism_party:0 "ドイツ共産党"
- SAR_FRA_social_democracy_party:0 "ザールラント社会民主党"
- SAR_FRA_social_liberalism_party:0 "民主社会主義抗戦同盟"
- SAR_FRA_classical_liberalism_party:0 "ザール民主党"
- SAR_FRA_liberal_conservatism_party:0 "ザールラントキリスト教民主同盟"
- SAR_FRA_social_conservatism_party:0 "民主社会主義抗戦同盟"
- SAR_FRA_authoritative_democracy_party:0 "人民共和派運動"
- SAR_FRA_reactionary_authoritarianism_party:0 "中央党"
- SAR_FRA_national_populism_party:0 "経済再生連合"
+ SAR_total_socialism_party:0 "ドイツ共産党"
+ SAR_radical_socialism_party:0 "ドイツ共産党"
+ SAR_social_democracy_party:0 "ザールラント社会民主党"
+ SAR_social_liberalism_party:0 "民主社会主義抗戦同盟"
+ SAR_classical_liberalism_party:0 "ザール民主党"
+ SAR_liberal_conservatism_party:0 "ザールラントキリスト教民主同盟"
+ SAR_social_conservatism_party:0 "民主社会主義抗戦同盟"
+ SAR_authoritative_democracy_party:0 "人民共和派運動"
+ SAR_reactionary_authoritarianism_party:0 "中央党"
+ SAR_national_populism_party:0 "経済再生連合"
  
- RHI_FRA_total_socialism_party:0 "ドイツ共産党"
- RHI_FRA_radical_socialism_party:0 "ドイツ共産党"
- RHI_FRA_social_democracy_party:0 "ラインラント社会民主党"
- RHI_FRA_social_liberalism_party:0 "民主社会主義抗戦同盟"
- RHI_FRA_classical_liberalism_party:0 "社会民主共和党同盟"
- RHI_FRA_liberal_conservatism_party:0 "ラインラントキリスト教民主同盟"
- RHI_FRA_social_conservatism_party:0 "民主社会主義抗戦同盟"
- RHI_FRA_authoritative_democracy_party:0 "人民共和派運動"
- RHI_FRA_reactionary_authoritarianism_party:0 "中央党"
- RHI_FRA_national_populism_party:0 "経済再生連合"
+ RHI_total_socialism_party:0 "ドイツ共産党"
+ RHI_radical_socialism_party:0 "ドイツ共産党"
+ RHI_social_democracy_party:0 "ラインラント社会民主党"
+ RHI_social_liberalism_party:0 "民主社会主義抗戦同盟"
+ RHI_classical_liberalism_party:0 "社会民主共和党同盟"
+ RHI_liberal_conservatism_party:0 "ラインラントキリスト教民主同盟"
+ RHI_social_conservatism_party:0 "民主社会主義抗戦同盟"
+ RHI_authoritative_democracy_party:0 "人民共和派運動"
+ RHI_reactionary_authoritarianism_party:0 "中央党"
+ RHI_national_populism_party:0 "経済再生連合"
  
  ITA_total_socialism_party:0 "イタリア共産党"
  ITA_radical_socialism_party:0 "イタリア社会党"
@@ -251,7 +251,38 @@
  SAU_national_populism_party:0 "諮問評議会"
  
 #ヨーロッパ
+ BEL_total_socialism_party:0 "ベルギー共産党"
+ BEL_radical_socialism_party:0 "ベルギー共産党"
  BEL_social_democracy_party:0 "ベルギー社会党"
+ BEL_social_liberalism_party:0 "自由党"
+ BEL_classical_liberalism_party:0 "自由党"
+ BEL_liberal_conservatism_party:0 "キリスト教社会党"
+ BEL_social_conservatism_party:0 "カトリック党"
+ BEL_authoritative_democracy_party:0 "ザクセン＝コーブルク＝ゴータ家"
+ BEL_reactionary_authoritarianism_party:0 "ザクセン＝コーブルク＝ゴータ家"
+ BEL_national_populism_party:0 "レクシスト党"
+ 
+ HOL_total_socialism_party:0 "オランダ共産党"
+ HOL_radical_socialism_party:0 "オランダ共産党"
+ HOL_social_democracy_party:0 "社会民主労働党"
+ HOL_social_liberalism_party:0 "自由民主連合"
+ HOL_classical_liberalism_party:0 "キリスト教歴史同盟"
+ HOL_liberal_conservatism_party:0 "反革命党"
+ HOL_social_conservatism_party:0 "カトリック人民党"
+ HOL_authoritative_democracy_party:0 "オラニエ＝ナッサウ家"
+ HOL_reactionary_authoritarianism_party:0 "オラニエ＝ナッサウ家"
+ HOL_national_populism_party:0 "オランダ国家社会主義運動"
+ 
+ LUX_total_socialism_party:0 "ルクセンブルク共産党"
+ LUX_radical_socialism_party:0 "ルクセンブルク共産党"
+ LUX_social_democracy_party:0 "ルクセンブルク社会主義労働者党"
+ LUX_social_liberalism_party:0 "自由党"
+ LUX_classical_liberalism_party:0 "自由党"
+ LUX_liberal_conservatism_party:0 "キリスト教社会人民党"
+ LUX_social_conservatism_party:0 "民主党"
+ LUX_authoritative_democracy_party:0 "ナッソー＝ヴェイユブール家"
+ LUX_reactionary_authoritarianism_party:0 "ナッソー＝ヴェイユブール家"
+ LUX_national_populism_party:0 "独立国民党"
  
  DDR_total_socialism_party:0 "ドイツ社会主義統一党"
  DDR_radical_socialism_party:0 "自由ドイツ労働総同盟"
