--- a/localisation/_geacps_parties_l_english.yml
+++ b/localisation/_geacps_parties_l_english.yml
@@ -109,7 +109,7 @@
  SAR_social_conservatism_party:0 "民主社会主義抗戦同盟"
  SAR_authoritative_democracy_party:0 "人民共和派運動"
  SAR_reactionary_authoritarianism_party:0 "中央党"
- SAR_national_populism_party:0 "経済再生連合"
+ SAR_national_populism_party:0 "高等弁務官"
  
  RHI_total_socialism_party:0 "ドイツ共産党"
  RHI_radical_socialism_party:0 "ドイツ共産党"
@@ -120,7 +120,7 @@
  RHI_social_conservatism_party:0 "民主社会主義抗戦同盟"
  RHI_authoritative_democracy_party:0 "人民共和派運動"
  RHI_reactionary_authoritarianism_party:0 "中央党"
- RHI_national_populism_party:0 "経済再生連合"
+ RHI_national_populism_party:0 "高等弁務官"
  
  ITA_total_socialism_party:0 "イタリア共産党"
  ITA_radical_socialism_party:0 "イタリア社会党"
@@ -327,6 +327,17 @@
  SWE_authoritative_democracy_party:0 "穏健党"
  SWE_reactionary_authoritarianism_party:0 "ベルナドッテ王朝"
  SWE_national_populism_party:0 "国家社会主義労働者党"
+ 
+ SWI_total_socialism_party:0 "スイス労働党"
+ SWI_radical_socialism_party:0 "スイス労働党"
+ SWI_social_democracy_party:0 "スイス社会民主党"
+ SWI_social_liberalism_party:0 "独立派の同盟"
+ SWI_classical_liberalism_party:0 "スイス自由民主党"
+ SWI_liberal_conservatism_party:0 "スイスキリスト教民主党"
+ SWI_social_conservatism_party:0 "農民・職人・市民の党"
+ SWI_authoritative_democracy_party:0 "軍事政権"
+ SWI_reactionary_authoritarianism_party:0 "軍事政権"
+ SWI_national_populism_party:0 "スイス国民運動"
  
  GRE_total_socialism_party:0 "ギリシャ共産党"
  GRE_radical_socialism_party:0 "社会党"
