--- a/localisation/_geacps_parties_l_english.yml
+++ b/localisation/_geacps_parties_l_english.yml
@@ -109,7 +109,7 @@
  SAR_social_conservatism_party:0 "民主社会主義抗戦同盟"
  SAR_authoritative_democracy_party:0 "人民共和派運動"
  SAR_reactionary_authoritarianism_party:0 "中央党"
- SAR_national_populism_party:0 "高等弁務官"
+ SAR_national_populism_party:0 "高等弁務官事務所"
  
  RHI_total_socialism_party:0 "ドイツ共産党"
  RHI_radical_socialism_party:0 "ドイツ共産党"
@@ -120,7 +120,7 @@
  RHI_social_conservatism_party:0 "民主社会主義抗戦同盟"
  RHI_authoritative_democracy_party:0 "人民共和派運動"
  RHI_reactionary_authoritarianism_party:0 "中央党"
- RHI_national_populism_party:0 "高等弁務官"
+ RHI_national_populism_party:0 "高等弁務官事務所"
  
  ITA_total_socialism_party:0 "イタリア共産党"
  ITA_radical_socialism_party:0 "イタリア社会党"
