やっちゃえ国旗変更

--- a/localisation/countries_colony_l_english.yml
+++ b/localisation/countries_colony_l_english.yml
@@ -1,24 +1,24 @@
 ﻿l_english:
 #大日本帝国
- HAW_JAP_imperial_member:0 "布哇王国"
- HAW_JAP_imperial_member_DEF:0 "布哇王国"
- HAW_JAP_imperial_member_ADJ:0 "布哇"
+ HAW_JAP_imperial_member:0 "日本領布哇王国"
+ HAW_JAP_imperial_member_DEF:0 "日本領布哇王国"
+ HAW_JAP_imperial_member_ADJ:0 "日領布哇"
  
- TWN_JAP_imperial_overseas_territory:0 "台湾総督府"
- TWN_JAP_imperial_overseas_territory_DEF:0 "台湾総督府"
- TWN_JAP_imperial_overseas_territory_ADJ:0 "台湾総督"
+ TWN_JAP_imperial_overseas_territory:0 "日本領台湾"
+ TWN_JAP_imperial_overseas_territory_DEF:0 "日本領台湾"
+ TWN_JAP_imperial_overseas_territory_ADJ:0 "日領台湾"
  
- KWA_JAP_leased_territory:0 "関東都督府"
- KWA_JAP_leased_territory_DEF:0 "関東都督府"
- KWA_JAP_ADJ:0 "関東都督"
+ KWA_JAP_leased_territory:0 "日本領関東州"
+ KWA_JAP_leased_territory_DEF:0 "日本領関東州"
+ KWA_JAP_ADJ:0 "日領関東州"
  
- KOR_JAP_imperial_overseas_territory:0 "朝鮮総督府"
- KOR_JAP_imperial_overseas_territory_DEF:0 "朝鮮総督府"
- KOR_JAP_imperial_overseas_territory_ADJ:0 "朝鮮総督"
+ KOR_JAP_imperial_overseas_territory:0 "日本領朝鮮"
+ KOR_JAP_imperial_overseas_territory_DEF:0 "日本領朝鮮"
+ KOR_JAP_imperial_overseas_territory_ADJ:0 "日領朝鮮"
  
- FSM_JAP:0 "南洋庁"
- FSM_JAP_DEF:0 "南洋庁"
- FSM_JAP_ADJ:0 "南洋"
+ FSM_JAP:0 "日本領南洋諸島"
+ FSM_JAP_DEF:0 "日本領南洋諸島"
+ FSM_JAP_ADJ:0 "日領南洋諸島"
  
  INSandMAL_JAP:0 "インドネシア及びマラヤ独立準備政府"
  INSandMAL_JAP_DEF:0 "インドネシア及びマラヤ独立準備政府"
