--- a/localisation/geacps_ITA_l_english.yml
+++ b/localisation/geacps_ITA_l_english.yml
@@ -2,5 +2,5 @@
 #国家方針
  
 #国民精神
- GEACPS_IDEA_ITA_1:0 "トリノ協定"
- GEACPS_IDEA_ITA_2:0 "敗戦の記憶"
+ ITA_torino_agreement:0 "トリノ協定"
+ ITA_national_liberation_committee:0 "国民解放委員会"
