--- a/localisation/_geacps_countries_l_english.yml
+++ b/localisation/_geacps_countries_l_english.yml
@@ -371,6 +371,15 @@
  ROM_republic:0 "ルーマニア共和国"
  ROM_republic_DEF:0 "ルーマニア共和国"
  
+ ROM_kingdom:0 "ルーマニア王国"
+ ROM_kingdom_DEF:0 "ルーマニア王国"
+ ROM_republic:0 "ルーマニア共和国"
+ ROM_republic_DEF:0 "ルーマニア共和国"
+ ROM_republic_total_socialism:0 "ルーマニア人民共和国"
+ ROM_republic_total_socialism_DEF:0 "ルーマニア人民共和国"
+ ROM_republic_radical_socialism:0 "ルーマニア人民共和国"
+ ROM_republic_radical_socialism_DEF:0 "ルーマニア人民共和国"
+ 
  SAX_kingdom:0 "ザクセン王国"
  SAX_kingdom_DEF:0 "ザクセン王国"
  
