--- a/localisation/_geacps_parties_l_english.yml
+++ b/localisation/_geacps_parties_l_english.yml
@@ -372,6 +372,17 @@
  SPR_reactionary_authoritarianism_party:0 "伝統主義派"
  SPR_national_populism_party:0 "新ファランヘ党"
  
+ SER_total_socialism_party:0 "ユーゴスラビア共産党"
+ SER_radical_socialism_party:0 "内部マケドニア革命組織"
+ SER_social_democracy_party:0 "ユーゴスラヴ社会民主党"
+ SER_social_liberalism_party:0 "共和農民党"
+ SER_classical_liberalism_party:0 "独立民主党"
+ SER_liberal_conservatism_party:0 "民主党"
+ SER_social_conservatism_party:0 "急進党"
+ SER_authoritative_democracy_party:0 "ユーゴスラビア国民党"
+ SER_reactionary_authoritarianism_party:0 "カラジョルジェヴィチ家"
+ SER_national_populism_party:0 "ユーゴスラビア国民運動"
+ 
 #新大陸
  CHL_social_liberalism_party:0 "急進党"
  
