--- a/localisation/_geacps_bookmarks_l_english.yml
+++ b/localisation/_geacps_bookmarks_l_english.yml
@@ -1,10 +1,10 @@
 ﻿l_english:
 #シナリオ
  THE_GORIOUS_FAR_EAST_EMPIRE_NAME:0 "栄光ある極東の帝国"
- THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
+ THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 "我が国は大東亜戦争において連合国を撃破し、大東亜新秩序を築いた。太陽の沈まぬ国となった我が国だが、問題が山積しているのも確かである。政党政治への不信や軍部の台頭、終わらぬ支那事変、植民地での独立運動、失われた極東を取り戻すべく肥大化する赤き帝国、密かに報復を狙う自由の帝国...\n果たして我が国の未来は繁栄か没落か。"
  
  THE_CHAOS_OF_EUROPE_NAME:0 "混沌の欧州"
- THE_CHAOS_OF_EUROPE_DESC:0 "欧州は混沌に包まれている...先の大戦では拡大化した枢軸の撲滅に成功したものの、その後の新秩序を保つ事には失敗した。後に「冷戦」と呼ばれるこの構造は、イギリスとフランス、ロシアの間に暗い影を落としている。かつての支配者であるドイツは大きく三つに分割され、その同盟国だったイタリアでは、南部がその支配から脱した。バルト海のシュチェチンからアドリア海のトリエステの間でヨーロッパは大きく二分され、さらに一方ではイギリスとフランスの対立が激化しようとしている。"
+ THE_CHAOS_OF_EUROPE_DESC:0 "欧州は混沌に包まれている...\n先の大戦では肥大化したドイツとイタリア、及びそれらの同盟国の崩壊に成功した。しかし、戦勝国の独自路線が仇となり、戦後の新秩序を保つ事には失敗した。後に「冷戦」と呼ばれるこの構造は、イギリスとフランス、ロシアの間に暗い影を落としている。以前の支配者は、大きく三つに分断され、その最大の同盟国は、南部が支配から脱した。\nバルト海のシュチェチンからアドリア海のトリエステの間で欧州は二分され、さらに一方では、イギリスとフランスの海峡を超えた対立が激化しようとしていたのだった..."
  
 #各国の説明
  ENG_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 "イギリスは辛うじて勝利を収めたものの、問題が山積しているのも事実である。隣国との関係悪化や鉄のカーテンを隔てた向こう側との関係、脱植民地化の加速等の問題に対して、クレメント・アトリー率いる労働党はどう対処するのだろうか...？"
