--- a/localisation/_geacps_modifiers_l_english.yml
+++ b/localisation/_geacps_modifiers_l_english.yml
@@ -9,3 +9,13 @@
  authoritative_democracy_drift:0 "日毎の権威的民主主義への支援"
  reactionary_authoritarianism_drift:0 "日毎の反動的権威主義への支援"
  national_populism_drift:0 "日毎の国家大衆主義への支援"
+ total_socialism_acceptance:0 "全体的社会主義者との外交の容認"
+ radical_socialism_acceptance:0 "急進的社会主義者との外交の容認"
+ social_democracy_acceptance:0 "社会民主主義者との外交の容認"
+ social_liberalism_acceptance:0 "社会自由主義者との外交の容認"
+ classical_liberalism_acceptance:0 "古典的自由主義者との外交の容認"
+ liberal_conservatism_acceptance:0 "自由保守主義者との外交の容認"
+ social_conservatism_acceptance:0 "社会保守主義者との外交の容認"
+ authoritative_democracy_acceptance:0 "権威的民主主義者との外交の容認"
+ reactionary_authoritarianism_acceptance:0 "反動的権威主義者との外交の容認"
+ national_populism_acceptance:0 "国家大衆主義者との外交の容認"
