--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -166,20 +166,23 @@
  JAP_the_greater_east_asia_conference_and_the_greater_east_asia_joint_declaration:0 "大東亜会議と大東亜共同宣言"
  
 #イベント
- GEACPS_japan.001.title:0 "海軍を主導する人材の選定"
- GEACPS_japan.001.desc:0 "太平洋戦争では今までの戦争とは打って変わった戦法も重要であることが分かった。これらのことを踏まえ、我々はこれからの時代の帝国艦隊を率いていく人材を選定する必要がある。これは国家の存亡にかかわる重大な事案であり、慎重に考えなければならない・・・"
- GEACPS_japan.001.a:0 "航空主兵主義者を据え置く"
- GEACPS_japan.001.b:0 "大艦巨砲主義者を再び"
- GEACPS_japan.001.c:0 "夜戦第一主義者を探し出す"
- GEACPS_japan.002.title:0 "[GetYear]年国策研究大綱"
- GEACPS_japan.002.desc:0 "新たな国策研究の方針を立てなければいけない"
- GEACPS_japan.002.a:0 "軍事研究"
- GEACPS_japan.002.b:0 "民間研究"
- GEACPS_japan.003.title:0 "[GetYear]年国策研究大綱"
- GEACPS_japan.003.desc:0 "軍事研究の促進において特に重視すべきことはなんであるか。"
- GEACPS_japan.003.a:0 "陸軍"
- GEACPS_japan.003.b:0 "海軍"
- GEACPS_japan.003.c:0 "空軍"
+ geacps_JAP.1.t:0 "東條英機暗殺未遂事件"
+ geacps_JAP.1.d:0 "A"
+ geacps_JAP.1.a:0 "首謀者を逮捕しろ！"
+ geacps_JAP.001.title:0 "海軍を主導する人材の選定"
+ geacps_JAP.001.desc:0 "太平洋戦争では今までの戦争とは打って変わった戦法も重要であることが分かった。これらのことを踏まえ、我々はこれからの時代の帝国艦隊を率いていく人材を選定する必要がある。これは国家の存亡にかかわる重大な事案であり、慎重に考えなければならない・・・"
+ geacps_JAP.001.a:0 "航空主兵主義者を据え置く"
+ geacps_JAP.001.b:0 "大艦巨砲主義者を再び"
+ geacps_JAP.001.c:0 "夜戦第一主義者を探し出す"
+ geacps_JAP.002.title:0 "[GetYear]年国策研究大綱"
+ geacps_JAP.002.desc:0 "新たな国策研究の方針を立てなければいけない"
+ geacps_JAP.002.a:0 "軍事研究"
+ geacps_JAP.002.b:0 "民間研究"
+ geacps_JAP.003.title:0 "[GetYear]年国策研究大綱"
+ geacps_JAP.003.desc:0 "軍事研究の促進において特に重視すべきことはなんであるか。"
+ geacps_JAP.003.a:0 "陸軍"
+ geacps_JAP.003.b:0 "海軍"
+ geacps_JAP.003.c:0 "空軍"
  
 #ディシジョン
  JAP_national_policy_research_outline:0 "国策研究大綱"
