--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
 #国家方針
- JAP_Attempted_assassination_of_Hideki_Tojo:0 "東条英機の暗殺未遂"
+ JAP_1-22_Incident:0 "一・二二事件"
  JAP_Holding_a_special_meeting_of_the_assembly:0 "臨時議会の開催"
  JAP_Proclamation_of_Martial_Law:0 "戒厳令の発布"
  JAP_Selection_of_the_next_Prime_Minister:0 "次期首相の選考"
@@ -166,7 +166,7 @@
  JAP_the_greater_east_asia_conference_and_the_greater_east_asia_joint_declaration:0 "大東亜会議と大東亜共同宣言"
  
 #イベント
- geacps_JAP.1.t:0 "東條英機暗殺未遂事件"
+ geacps_JAP.1.t:0 "一・二二事件"
  geacps_JAP.1.d:0 "A"
  geacps_JAP.1.a:0 "首謀者を逮捕しろ！"
  geacps_JAP.001.title:0 "海軍を主導する人材の選定"
