--- a/localisation/_geacps_parties_l_english.yml
+++ b/localisation/_geacps_parties_l_english.yml
@@ -20,7 +20,29 @@
  KOR_social_conservatism_party:0 "韓国独立党"
  KOR_authoritative_democracy_party:0 "開化派"
  KOR_reactionary_authoritarianism_party:0 "事大党"
- KOR_national_populism_party:0 "朝鮮民族革命党"
+ KOR_national_populism_party:0 "朝鮮総督府"
+ 
+ KWA_total_socialism_party:0 "日本共産党関東支部"
+ KWA_radical_socialism_party:0 "日本無産党関東支部"
+ KWA_social_democracy_party:0 "社会大衆党関東支部"
+ KWA_social_liberalism_party:0 "自由党関東支部"
+ KWA_classical_liberalism_party:0 "進歩党関東支部"
+ KWA_liberal_conservatism_party:0 "立憲民政党関東支部"
+ KWA_social_conservatism_party:0 "立憲政友会関東支部"
+ KWA_authoritative_democracy_party:0 "協同党関東支部"
+ KWA_reactionary_authoritarianism_party:0 "立憲帝政党関東支部"
+ KWA_national_populism_party:0 "関東庁"
+ 
+ TWN_total_socialism_party:0 "日本共産党台湾支部"
+ TWN_radical_socialism_party:0 "日本無産党台湾支部"
+ TWN_social_democracy_party:0 "社会大衆党台湾支部"
+ TWN_social_liberalism_party:0 "自由党台湾支部"
+ TWN_classical_liberalism_party:0 "進歩党台湾支部"
+ TWN_liberal_conservatism_party:0 "立憲民政党台湾支部"
+ TWN_social_conservatism_party:0 "立憲政友会台湾支部"
+ TWN_authoritative_democracy_party:0 "協同党台湾支部"
+ TWN_reactionary_authoritarianism_party:0 "立憲帝政党台湾支部"
+ TWN_national_populism_party:0 "台湾総督府"
  
  MAN_total_socialism_party:0 "日本共産党満州支部"
  MAN_radical_socialism_party:0 "日本無産党満州支部"
