VP改訂計画　第1次中間報告
GEACPS開発委員会
2021年度業務計画概要

--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -8,7 +8,14 @@
  VICTORY_POINTS_6521:0 "西ベルリン"
  VICTORY_POINTS_13238:0 "東ベルリン"
  VICTORY_POINTS_9904:0 "ローマ"
-
+ 
+#主要都市
+ VICTORY_POINTS_9998:0 "横浜"
+ VICTORY_POINTS_10125:0 "名古屋"
+ VICTORY_POINTS_11960:0 "京都"
+ VICTORY_POINTS_7072:0 "大阪"
+ VICTORY_POINTS_12031:0 "神戸"
+ 
  VICTORY_POINTS_692:0 "ミュンヘン"
  VICTORY_POINTS_6469:0 "エッセン"
  VICTORY_POINTS_9347:0 "ハンブルク"
@@ -273,8 +280,7 @@
  VICTORY_POINTS_10438:0 "ナコーンラーチャシーマー"
  VICTORY_POINTS_4075:0 "ハノイ"
  VICTORY_POINTS_4401:0 "サイゴン"
- VICTORY_POINTS_7072:0 "大阪"
- VICTORY_POINTS_1025:0 "小倉"
+ VICTORY_POINTS_1025:0 "福岡"
  VICTORY_POINTS_1092:0 "広島"
  VICTORY_POINTS_1117:0 "新潟"
  VICTORY_POINTS_4102:0 "鹿児島"
@@ -284,7 +290,6 @@
  VICTORY_POINTS_7197:0 "高知"
  VICTORY_POINTS_9950:0 "長崎"
  VICTORY_POINTS_10032:0 "金沢"
- VICTORY_POINTS_10125:0 "名古屋"
  VICTORY_POINTS_10444:0 "札幌"
  VICTORY_POINTS_12421:0 "旭川"
  VICTORY_POINTS_12446:0 "豊原"
@@ -907,7 +912,6 @@
  VICTORY_POINTS_2115:0 "ナミベ"
  VICTORY_POINTS_1623:0 "ブハラ"
  VICTORY_POINTS_8095:0 "貴陽"
- VICTORY_POINTS_11960:0 "京都"
  VICTORY_POINTS_13236:0 "東ベルリン"
  VICTORY_POINTS_12641:0 "チタ"
  VICTORY_POINTS_13239:0 "ヘルシンキ"
