VP改訂計画　第2次中間報告
GEACPS開発委員会
2021年度業務計画概要

追記:もう一度

--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -387,7 +387,7 @@
  STATE_940:0 "モマ"
  STATE_941:0 "ヴェルフネコルィムスク"
  STATE_942:0 "スレドネコルィムスク"
- STATE_943:0 "コマンドルスキー諸島"
+ STATE_943:0 "山崎諸島"
  STATE_944:0 "パハン"
  STATE_945:0 "セランゴール"
  STATE_946:0 "ヌグリ・スンビラン"
