--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -16,6 +16,9 @@
  VICTORY_POINTS_7072:0 "大阪"
  VICTORY_POINTS_12031:0 "神戸"
  
+ VICTORY_POINTS_12207:0 "山崎諸島"
+ VICTORY_POINTS_13026:0 "南鳥島"
+ VICTORY_POINTS_1158:0 "佐世保"
  VICTORY_POINTS_692:0 "ミュンヘン"
  VICTORY_POINTS_6469:0 "エッセン"
  VICTORY_POINTS_9347:0 "ハンブルク"
@@ -492,8 +495,8 @@
  VICTORY_POINTS_13038:0 "ナウル"
  VICTORY_POINTS_13041:0 "クェゼリン環礁"
  VICTORY_POINTS_13046:0 "エニウェトク環礁"
- VICTORY_POINTS_13047:0 "ウェーク"
- VICTORY_POINTS_13052:0 "ミッドウェー"
+ VICTORY_POINTS_13047:0 "大鳥島"
+ VICTORY_POINTS_13052:0 "水無月島"
  VICTORY_POINTS_4286:0 "スバ"
  VICTORY_POINTS_5010:0 "アディスアベバ"
  VICTORY_POINTS_1984:0 "ゴンダール"
