VP改訂計画　第3次・最終報告
GEACPS開発委員会
2021年度業務計画概要

--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -16,6 +16,9 @@
  VICTORY_POINTS_7072:0 "大阪"
  VICTORY_POINTS_12031:0 "神戸"
  
+ VICTORY_POINTS_10011:0 "対馬"
+ VICTORY_POINTS_7145:0 "隠岐諸島"
+ VICTORY_POINTS_9952:0 "佐渡"
  VICTORY_POINTS_12207:0 "山崎諸島"
  VICTORY_POINTS_13026:0 "南鳥島"
  VICTORY_POINTS_1158:0 "佐世保"
