--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -942,3 +942,41 @@
  VICTORY_POINTS_6570:0 "ボン"
  VICTORY_POINTS_4504:0 "貴陽"
  VICTORY_POINTS_12100:0 "メリリャ"
+ VICTORY_POINTS_9807:0 "盛岡"
+ VICTORY_POINTS_1063:0 "秋田"
+ VICTORY_POINTS_4067:0 "山形"
+ VICTORY_POINTS_1024:0 "郡山"
+ VICTORY_POINTS_4122:0 "若松"
+ VICTORY_POINTS_6873:0 "弘前"
+ VICTORY_POINTS_9859:0 "大湊"
+ VICTORY_POINTS_7016:0 "水戸"
+ VICTORY_POINTS_993:0 "宇都宮"
+ VICTORY_POINTS_4000:0 "前橋"
+ VICTORY_POINTS_4188:0 "千葉"
+ VICTORY_POINTS_11930:0 "新発田"
+ VICTORY_POINTS_12007:0 "上越"
+ VICTORY_POINTS_10032:0 "金沢"
+ VICTORY_POINTS_7102:0 "敦賀"
+ VICTORY_POINTS_11989:0 "甲府"
+ VICTORY_POINTS_10128:0 "松本"
+ VICTORY_POINTS_4172:0 "岐阜"
+ VICTORY_POINTS_7157:0 "富士宮"
+ VICTORY_POINTS_7087:0 "静岡"
+ VICTORY_POINTS_12072:0 "浜松"
+ VICTORY_POINTS_12097:0 "鈴鹿"
+ 
+ VICTORY_POINTS_1136:0 "舞鶴"
+ VICTORY_POINTS_1051:0 "奈良"
+ VICTORY_POINTS_7113:0 "和歌山"
+ VICTORY_POINTS_9807:0 "盛岡"
+ VICTORY_POINTS_9807:0 "盛岡"
+ VICTORY_POINTS_9807:0 "盛岡"
+ VICTORY_POINTS_9807:0 "盛岡"
+ VICTORY_POINTS_9807:0 "盛岡"
+ VICTORY_POINTS_9807:0 "盛岡"
+ VICTORY_POINTS_9807:0 "盛岡"
+ VICTORY_POINTS_9807:0 "盛岡"
+ VICTORY_POINTS_9807:0 "盛岡"
+ VICTORY_POINTS_9807:0 "盛岡"
+ VICTORY_POINTS_9807:0 "盛岡"
+ VICTORY_POINTS_9807:0 "盛岡"
