--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -294,7 +294,7 @@
  VICTORY_POINTS_7087:0 "静岡"
  VICTORY_POINTS_7169:0 "仙台"
  VICTORY_POINTS_7197:0 "高知"
- VICTORY_POINTS_9950:0 "長崎"
+ VICTORY_POINTS_9950:0 "大村"
  VICTORY_POINTS_10032:0 "金沢"
  VICTORY_POINTS_10444:0 "札幌"
  VICTORY_POINTS_12421:0 "旭川"
@@ -964,19 +964,18 @@
  VICTORY_POINTS_7087:0 "静岡"
  VICTORY_POINTS_12072:0 "浜松"
  VICTORY_POINTS_12097:0 "鈴鹿"
- 
  VICTORY_POINTS_1136:0 "舞鶴"
  VICTORY_POINTS_1051:0 "奈良"
  VICTORY_POINTS_7113:0 "和歌山"
- VICTORY_POINTS_9807:0 "盛岡"
- VICTORY_POINTS_9807:0 "盛岡"
- VICTORY_POINTS_9807:0 "盛岡"
- VICTORY_POINTS_9807:0 "盛岡"
- VICTORY_POINTS_9807:0 "盛岡"
- VICTORY_POINTS_9807:0 "盛岡"
- VICTORY_POINTS_9807:0 "盛岡"
- VICTORY_POINTS_9807:0 "盛岡"
- VICTORY_POINTS_9807:0 "盛岡"
- VICTORY_POINTS_9807:0 "盛岡"
- VICTORY_POINTS_9807:0 "盛岡"
- VICTORY_POINTS_9807:0 "盛岡"
+ VICTORY_POINTS_10055:0 "鳥取"
+ VICTORY_POINTS_1191:0 "松江"
+ VICTORY_POINTS_7212:0 "岡山"
+ VICTORY_POINTS_11946:0 "福山"
+ VICTORY_POINTS_11985:0 "山口"
+ VICTORY_POINTS_9965:0 "徳島"
+ VICTORY_POINTS_4094:0 "善通寺"
+ VICTORY_POINTS_4164:0 "久留米"
+ VICTORY_POINTS_1020:0 "都城"
+ VICTORY_POINTS_4102:0 "鹿児島"
+ VICTORY_POINTS_12032:0 "鹿屋"
+ VICTORY_POINTS_4198:0 "大隅諸島"
