--- a/localisation/_geacps_parties_l_english.yml
+++ b/localisation/_geacps_parties_l_english.yml
@@ -204,6 +204,9 @@
  HUN_reactionary_authoritarianism_party:0 "クリスチャン国民経済党"
  HUN_national_populism_party:0 "矢十字党"
  
+ AUS_HUN_social_democracy_party:0 "オーストリア社会民主党"
+ AUS_HUN_authoritative_democracy_party:0 "キリスト教社会党"
+ 
  POL_total_socialism_party:0 "ポーランド統一労働者党"
  POL_radical_socialism_party:0 "ポーランド労働者党"
  POL_social_democracy_party:0 "ポーランド社会党"
