--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -37,6 +37,10 @@
  OMA_trucial_DEF:0 "オマーン海岸トルーシャル国"
  OMA_trucial_ADJ:0 "トルーシャル・オマーン"
  
+ AUS_HUN:0 "オーストリア＝ハンガリー帝国"
+ AUS_HUN_DEF:0 "オーストリア＝ハンガリー帝国"
+ AUS_HUN_ADJ:0 "オーストリア＝ハンガリー"
+ 
 #中華民国政府
  CHI_provisional_government:0 "中華民国臨時政府"
  CHI_provisional_government_DEF:0 "中華民国臨時政府"
