--- a/localisation/_geacps_parties_l_english.yml
+++ b/localisation/_geacps_parties_l_english.yml
@@ -20,7 +20,7 @@
  KOR_social_conservatism_party:0 "韓国独立党"
  KOR_authoritative_democracy_party:0 "開化派"
  KOR_reactionary_authoritarianism_party:0 "事大党"
- KOR_national_populism_party:0 "朝鮮総督府"
+ KOR_national_populism_party:0 "朝鮮総督府"#国民総力朝鮮連盟
  
  KWA_total_socialism_party:0 "日本共産党関東支部"
  KWA_radical_socialism_party:0 "日本無産党関東支部"
@@ -31,7 +31,7 @@
  KWA_social_conservatism_party:0 "立憲政友会関東支部"
  KWA_authoritative_democracy_party:0 "協同党関東支部"
  KWA_reactionary_authoritarianism_party:0 "立憲帝政党関東支部"
- KWA_national_populism_party:0 "関東庁"
+ KWA_national_populism_party:0 "関東庁"#関東州興亜奉公連盟
  
  TWN_total_socialism_party:0 "日本共産党台湾支部"
  TWN_radical_socialism_party:0 "日本無産党台湾支部"
@@ -42,7 +42,7 @@
  TWN_social_conservatism_party:0 "立憲政友会台湾支部"
  TWN_authoritative_democracy_party:0 "協同党台湾支部"
  TWN_reactionary_authoritarianism_party:0 "立憲帝政党台湾支部"
- TWN_national_populism_party:0 "台湾総督府"
+ TWN_national_populism_party:0 "台湾総督府"#皇民奉公会
  
  MAN_total_socialism_party:0 "日本共産党満州支部"
  MAN_radical_socialism_party:0 "日本無産党満州支部"
