--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -1,8 +1,8 @@
 ﻿l_english:
 #国家方針
  JAP_1-22_Incident:0 "一・二二事件"
- JAP_Holding_a_special_meeting_of_the_assembly:0 "臨時議会の開催"
- JAP_Proclamation_of_Martial_Law:0 "戒厳令の発布"
+ JAP_Opening_of_the_extraordinary_session:0 "臨時会の開会"
+ JAP_Declaration_of_martial_law:0 "戒厳の宣告"
  JAP_Selection_of_the_next_Prime_Minister:0 "次期首相の選考"
  JAP_New_draft_constitution:0 "新憲法草案"
  JAP_Budget_deliberations:0 "予算の審議"
