--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -3,51 +3,55 @@
  JAP_1-22_Incident:0 "一・二二事件"
  JAP_Opening_of_the_extraordinary_session:0 "臨時会の開会"
  JAP_Declaration_of_martial_law:0 "戒厳の宣告"
- JAP_Selection_of_the_next_Prime_Minister:0 "次期首相の選考"
- JAP_New_draft_constitution:0 "新憲法草案"
- JAP_Budget_deliberations:0 "予算の審議"
- JAP_Socialist_Inspections:0 "社会主義者の査察"
- JAP_Communist_Reconnaissance:0 "共産主義者の内偵"
- JAP_Crackdown_on_anarchists:0 "無政府主義者の取り締まり"
- JAP_aristocratic_birth:0 "貴族出身"
- JAP_Military_background:0 "軍人出身"
- JAP_Politician_by_birth:0 "政治家出身"
- JAP_Respect_for_human_rights:0 "人権の尊重"
- JAP_Confirmation_of_sovereignty:0 "主権の確認"
- JAP_The_state_of_the_military:0 "軍の在り方"
- JAP_Army_Budget:0 "陸軍の予算"
- JAP_Navy_Budget:0 "海軍の予算"
- JAP_Temporary_stability:0 "一時的な安定"
- JAP_Militarism:0 "軍国主義"
- JAP_Wenmin_System:0 "文民統制"
- JAP_Passed:0 "可決！"
- JAP_Reform_of_the_War_Department:0 "陸軍省の改革"
- JAP_Expansion_of_the_Army_General_Staff:0 "陸軍参謀本部の拡張"
- JAP_Reform_of_the_Ministry_of_the_Navy:0 "海軍省の改革"
- JAP_Expansion_of_the_Naval_Command_Center:0 "海軍軍令部の拡張"
- JAP_Probation_for_thought_crime:0 "思想犯の保護観察"
- JAP_The_End_of_Factional_Struggle:0 "派閥闘争の終焉"
- JAP_Dealing_with_military_violence:0 "軍部の暴走に対処"
- JAP_promulgation:0 "発布！"
- JAP_Expansion_of_the_Army_Arsenal:0 "陸軍工廠の増設"
- JAP_Expansion_of_Naval_Arsenal:0 "海軍工廠の増設"
- JAP_Reconciliation_with_the_Imperialists:0 "皇道派との和解"
- JAP_Tacit_approval_of_coup_preparations:0 "クーデター準備の黙認"
- JAP_Council_of_Ministers:0 "重臣会議の開催"
- JAP_Implementing:0 "施行！"
- JAP_Recognition:0 "承認！"
- JAP_appointment_by_the_emperor:0 "天皇による任命"
- JAP_Conclusion_of_the_Congress:0 "議会の終結"
- JAP_first_work:0 "初仕事"
- JAP_foreign_policy:0 "対外政策"
- JAP_East_Progressive_Theory:0 "東進論"
- JAP_Westward_Movement_Theory:0 "西進論"
- JAP_Nanjin_Theory:0 "南進論"
- JAP_The_Northward_Movement:0 "北進論"
- JAP_Supporting_the_Republic_of_Washington:0 "ワシントン共和国を支援"
- JAP_Supporting_the_Republic_of_California:0 "カルフォルニア共和国を支援"
+ JAP_Election_of_Prime_Minister:0 "首相の選出"
+ JAP_Draft_Constitution:0 "憲法草案"
+ JAP_Draft_budget:0 "予算案"
+ JAP_Re-exclusion_of_imperialists:0 "皇道派を再排除"
+ JAP_Agrarian_watchdog:0 "農本主義者の監視"
+ JAP_Naval_officer's_purge:0 "海軍士官の粛軍"
+ JAP_Stability_of_the_situation:0 "事態の安定"
+ JAP_Economy:0 "経済"
+ JAP_Military:0 "軍事"
+ JAP_Question_of_interference_with_the_General_Staff:0 "統帥権干渉問題"
+ JAP_Kantaro_Suzuki:0 "鈴木貫太郎"
+ JAP_Fumimaro_Konoe:0 "近衛文麿"
+ JAP_Kuniaki_Koiso:0 "小磯國昭"
+ JAP_Dai_Nippon_Sangyo_Hoho_Diet:0 "大日本産業報国会"
+ JAP_Yokosuka_Naval_Arsenal:0 "横須賀海軍工廠"
+ JAP_Kure_Naval_Arsenal:0 "呉海軍工廠"
+ JAP_Maizuru_Naval_Factory:0 "舞鶴海軍工廠"
+ JAP_Sasebo_Naval_Factory:0 "佐世保海軍工廠"
+ JAP_Kokura_Army_Arsenal:0 "小倉陸軍造兵廠"
+ JAP_Tang_Rong_Artillery_Factory:0 "唐栄砲兵工廠"
+ JAP_Pyongyang_Weapons_Factory:0 "平壌兵器製造所"
+ JAP_Army_Aviation_Factory:0 "陸軍航空工廠"
+ JAP_Oni_no_Kantaro:0 "鬼の貫太郎"
+ JAP_Five_Reform_Directives:0 "五大改革指令"
+ JAP_The_Three_Arrows:0 "三本の矢"
+ JAP_Suzuki_and_Anan:0 "鈴木と阿南"
+ JAP_Civilian_System:0 "文民統制"
+ JAP_Exclusively_Defense-Oriented_Policy:0 "専守防衛"
+ JAP_Breakwaters_of_the_Pacific:0 "太平洋の防波堤"
+ JAP_Eternal_peace:0 "永遠の平和"
+ JAP_First_California-Japanese_Treaty:0 "第一次日加条約"
+ JAP_Second_California-Japanese_Treaty:0 "第二次日加条約"
+ JAP_Third_California-Japanese_Treaty:0 "第三次日加条約"
+ JAP_Treaty_on_the_Annexation_of_California:0 "加利福尼亜併合ニ関スル条約"
+ JAP_New_institutional_movement:0 "新体制運動"
+ JAP_Appointment_of_innovative_bureaucrats:0 "革新官僚の任命"
+ JAP_Establishment_of_a_new_economic_system:0 "経済新体制確立"
+ JAP_New_Order_of_East_Asia:0 "東亜新秩序"
+ JAP_Cooperation_with_control_groups:0 "統制派との連携"
  JAP_Expand_the_co_prosperity_sphere_to_the_other_side_of_the_river:0 "共栄圏を対岸に拡大"
  JAP_Intervention_in_civil_war:0 "内戦に介入"
+ JAP_New_regime_movement_in_the_outer_regions:0 "外地の新体制運動"
+ JAP_Korean_Tiger:0 "朝鮮の虎"
+ JAP_Conservative_bureaucratic_appointments:0 "保守官僚の任命"
+ JAP_Japan-Manchuria-Shina_Economic_Bloc:0 "日満支経済ブロック"
+ JAP_Koiso_and_Yonai:0 "小磯と米内"
+ JAP_Establishment_of_the_Chief_of_the_Supreme_Command:0 "最高幕僚長の設置"
+ JAP_Miao_Pin_route:0 "援繆ルート"
+ JAP_The_Koiso-Miao_Pin_Agreement:0 "小磯・繆斌協定"
  JAP_Alaskan_Expedition:0 "アラスカ出兵"
  JAP_Formation_of_the_Governing_Board_of_the_United_States_of_America:0 "亜米利加統治委員会の発足"
  JAP_Dealing_with_a_dying_sick_man_on_the_other_side_of_the_river:0 "対岸の瀕死の病人に対処"
