--- a/localisation/geacps_SIC_l_english.yml
+++ b/localisation/geacps_SIC_l_english.yml
@@ -52,6 +52,16 @@
  SIC_Expansion_of_Army_Division_desc:0""
  SIC_Improving_the_situation_of_the_division:0"師団の状況を改善"
  SIC_Improving_the_situation_of_the_division_desc:0""
+ SIC_Tarrant_Port:0 "タラント軍港"
+ SIC_Tarrant_Port_desc:0 ""
+ SIC_Add_Company:0 "中隊の追加"
+ SIC_Add_Company_desc:0 ""
+ SIC_Focus_on_Transports:0 "輸送艦への注力"
+ SIC_Focus_on_Transports_desc:0 ""
+ SIC_Fleet_Modernization:0 "艦隊の近代化改修"
+ SIC_Fleet_Modernization_desc:0 ""
+ SIC_Mediterranean_Fleet:0 "地中海艦隊"
+ SIC_Mediterranean_Fleet_desc:0 ""
  
 #国民精神
  SIC_idea_1:0"伝統的な産業"
