--- a/localisation/_geacps_game_start_l_english.yml
+++ b/localisation/_geacps_game_start_l_english.yml
@@ -8,3 +8,7 @@
  GEACPS_game_start.2.a:0 "一度こわしたら二度ともとに戻ることはない..."
  GEACPS_game_start.2.b:0 "中欧諸国の経済力は脆弱なため、社会民主的経済共同体を作るべきである。"
  GEACPS_game_start.2.c:0 "中欧諸国の経済力は脆弱なため、権威民主的経済共同体を作るべきである。"
+ GEACPS_game_start.3.t:0 "汎ベルギー主義"
+ GEACPS_game_start.3.d:0 "A"
+ GEACPS_game_start.3.a:0 "現状維持"
+ GEACPS_game_start.3.b:0 "自然国境説"
