--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -66,7 +66,6 @@
  STATE_65:0 "ザクセン"
  STATE_66:0 "ドルヌィ・シロンスク"
  STATE_67:0 "ゴルヌィ・シロンスク"
- 
  STATE_68:0 "ルブシュ"
  STATE_69:0 "ウースチー"	#ドイツ語: アウシヒ
  STATE_73:0 "ザカルパッチャ"
@@ -560,7 +559,6 @@
  STATE_1113:0 "ムサンダム"
  STATE_1114:0 "マドハー"
  STATE_1115:0 "ソコトラ"
- 
  STATE_1116:0 "セントルシア"
 #STATE_1117:0 ""
 #STATE_1118:0 ""
@@ -578,3 +576,5 @@
  STATE_1130:0 "チャンパーサック西部"
  STATE_1131:0 "ダルマチア"
  STATE_1132:0 "スラボニア"
+ STATE_1133:0 "ドルトレヒト"
+ STATE_1134:0 "ナイメーヘン"
