--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -580,3 +580,6 @@
  STATE_1134:0 "ナイメーヘン"
  STATE_1135:0 "ナンシー"
  STATE_1136:0 "グァンタナモ米軍基地"
+ STATE_1137:0 "威海衛"
+ STATE_1138:0 "湖州"
+ STATE_1139:0 "嘉興"
