--- a/localisation/replace/_geacps_loading_tips_l_english.yml
+++ b/localisation/replace/_geacps_loading_tips_l_english.yml
@@ -69,7 +69,7 @@
  LOADING_TIP_67: "大衆の考える最も身近な恐怖は変化することである。\n- ウィンストン・チャーチル"
  LOADING_TIP_68: "不誠実な人間が真実を言ったところで返ってくるのは失笑だけだ。\n- ウェンデル・L・ウィルキー"
  LOADING_TIP_69: "大統領。私の母は、スペインなのです。\n- ホセ・アントニオ・プリモ・デ・リベラ"
- LOADING_TIP_70: "\n- "
+ LOADING_TIP_70: "老兵は死なず、ただ消え去るのみ\n- ダグラス・マッカーサー"
  LOADING_TIP_71: "\n- "
  LOADING_TIP_72: "\n- "
  LOADING_TIP_73: "\n- "
