--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -600,3 +600,8 @@
  STATE_1150:0 "濰坊"
  STATE_1151:0 "蘇州"
  STATE_1152:0 "威海衛"
+ STATE_1153:0 "阜陽"
+ STATE_1154:0 "亳州"
+ STATE_1155:0 "淮北"
+ STATE_1156:0 "滁州"
+ STATE_1157:0 "宿州"
