--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -607,3 +607,8 @@
  STATE_1157:0 "宿州"
  STATE_1158:0 "南陽"
  STATE_1159:0 "信陽"
+ STATE_1160:0 "九江"
+ STATE_1161:0 "南昌"
+ STATE_1162:0 "景徳鎮"
+ STATE_1163:0 "上饒"
+ STATE_1164:0 "鷹潭"
