--- a/localisation/replace/_geacps_loading_tips_l_english.yml
+++ b/localisation/replace/_geacps_loading_tips_l_english.yml
@@ -59,7 +59,7 @@
  LOADING_TIP_57: "我々は海岸で戦う、我々は水際で戦う、我々は野原と街頭で戦う、我々は丘で戦う。我々は決して降伏しない。\n- ウィンストン・チャーチル"
  LOADING_TIP_58: "我ニ追イツク敵機無シ\n- 彩雲の電文"
  LOADING_TIP_59: "一歩も下がるな!\n- ソ連国防人民委員令第227号"
- LOADING_TIP_60: "皇国ノ興廃此ノ一戦ニ在リ、各員一層奮励努力セヨ\n- 東郷平八郎"
+ LOADING_TIP_60: "皇国ノ興廃此ノ一戦ニ在リ、各員一層奮励努力セヨ\n- 東郷 平八郎"
  LOADING_TIP_61: "英国は各員がその義務を尽くすことを期待する\n- ホレーショ・ネルソン"
  LOADING_TIP_62: "欲しがりません勝つまでは\n- 戦時標語"
  LOADING_TIP_63: "ぜいたくは敵だ！\n- 戦時標語"
@@ -70,7 +70,7 @@
  LOADING_TIP_68: "不誠実な人間が真実を言ったところで返ってくるのは失笑だけだ。\n- ウェンデル・L・ウィルキー"
  LOADING_TIP_69: "大統領。私の母は、スペインなのです。\n- ホセ・アントニオ・プリモ・デ・リベラ"
  LOADING_TIP_70: "老兵は死なず、ただ消え去るのみ\n- ダグラス・マッカーサー"
- LOADING_TIP_71: "\n- "
+ LOADING_TIP_71: "近衛首相にはその気迫はあるまい\n- 杉山 元"
  LOADING_TIP_72: "\n- "
  LOADING_TIP_73: "\n- "
  LOADING_TIP_74: "\n- "
