--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -979,3 +979,7 @@
  VICTORY_POINTS_4102:0 "鹿児島"
  VICTORY_POINTS_12032:0 "鹿屋"
  VICTORY_POINTS_4198:0 "大隅諸島"
+ VICTORY_POINTS_13273:0 "ダマン"
+ VICTORY_POINTS_13274:0 "ディウ"
+ VICTORY_POINTS_13275:0 "カーライッカール"
+ VICTORY_POINTS_13276:0 "ヤナム"
