--- a/localisation/replace/_geacps_loading_tips_l_english.yml
+++ b/localisation/replace/_geacps_loading_tips_l_english.yml
@@ -71,9 +71,9 @@
  LOADING_TIP_69: "大統領。私の母は、スペインなのです。\n- ホセ・アントニオ・プリモ・デ・リベラ"
  LOADING_TIP_70: "老兵は死なず、ただ消え去るのみ\n- ダグラス・マッカーサー"
  LOADING_TIP_71: "近衛首相にはその気迫はあるまい\n- 杉山 元"
- LOADING_TIP_72: "\n- "
- LOADING_TIP_73: "\n- "
- LOADING_TIP_74: "\n- "
+ LOADING_TIP_72: "Поехали!(さあ行こう!)\n- ユーリイ・ガガーリン"
+ LOADING_TIP_73: "地球は青かった\n- ユーリイ・ガガーリン"
+ LOADING_TIP_74: "神はいなかった\n- ユーリイ・ガガーリン"
  LOADING_TIP_75: "\n- "
  LOADING_TIP_76: "\n- "
  LOADING_TIP_77: "\n- "
