--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -165,6 +165,7 @@
  STATE_425:0 "カルナータカ"
  STATE_427:0 "テランガーナ"
  STATE_429:0 "ムンバイ"
+ STATE_430:0 "中央ベンガル"
  STATE_435:0 "パトナー"
  STATE_437:0 "マディヤ・プラデーシュ"
  STATE_439:0 "ハリヤーナー"
@@ -268,7 +269,7 @@
  STATE_818:0 "ラカイン"
  STATE_819:0 "ヤンゴン"
  STATE_820:0 "カチン"
- STATE_821:0 "クルナ"
+ STATE_821:0 "南ベンガル"
  STATE_822:0 "シッキム"
  STATE_823:0 "ダルバンガ"
  STATE_824:0 "天津"
@@ -621,3 +622,5 @@
  STATE_1171:0 "ディウ"
  STATE_1172:0 "カーライッカール"
  STATE_1173:0 "ヤナム"
+ STATE_1174:0 "北ベンガル"
+ STATE_1175:0 "東ベンガル"
