--- a/localisation/replace/_geacps_loading_tips_l_english.yml
+++ b/localisation/replace/_geacps_loading_tips_l_english.yml
@@ -74,7 +74,7 @@
  LOADING_TIP_72: "Поехали!(さあ行こう!)\n- ユーリイ・ガガーリン"
  LOADING_TIP_73: "地球は青かった\n- ユーリイ・ガガーリン"
  LOADING_TIP_74: "神はいなかった\n- ユーリイ・ガガーリン"
- LOADING_TIP_75: "\n- "
+ LOADING_TIP_75: "日本兵士よ。脱走しなさい。私が日本に帰れるようにしてあげます。\n- 野坂 参三"
  LOADING_TIP_76: "\n- "
  LOADING_TIP_77: "\n- "
  LOADING_TIP_78: "\n- "
