--- a/localisation/replace/_geacps_loading_tips_l_english.yml
+++ b/localisation/replace/_geacps_loading_tips_l_english.yml
@@ -75,7 +75,7 @@
  LOADING_TIP_73: "地球は青かった\n- ユーリイ・ガガーリン"
  LOADING_TIP_74: "神はいなかった\n- ユーリイ・ガガーリン"
  LOADING_TIP_75: "日本兵士よ。脱走しなさい。私が日本に帰れるようにしてあげます。\n- 野坂 参三"
- LOADING_TIP_76: "\n- "
+ LOADING_TIP_76: "全ての人間の全ての人間に対するかのような闘争\n- 『リヴァイアサン』"
  LOADING_TIP_77: "\n- "
  LOADING_TIP_78: "\n- "
  LOADING_TIP_79: "\n- "
