--- a/localisation/_geacps_countries_l_english.yml
+++ b/localisation/_geacps_countries_l_english.yml
@@ -1287,8 +1287,8 @@
  BMU:0 "バミューダ"
  BMU_DEF:0 "バミューダ"
  
- BRD:0 "バルバドス"
- BRD_DEF:0 "バルバドス"
+ BRB:0 "バルバドス"
+ BRB_DEF:0 "バルバドス"
  
  CYM:0 "ケイマン島"
  CYM_DEF:0 "ケイマン島"
