--- a/localisation/_geacps_special_event_l_english.yml
+++ b/localisation/_geacps_special_event_l_english.yml
@@ -1,2 +1,6 @@
 ﻿l_english:
  geacps_special_event_TEXT:0 "時計"
+ 
+ SE_SECOND_ACW_TITLE:0 "Second America Civil War"
+ SE_SECOND_ACW_TEXT:0 "War, War is never change"
+ 
