--- a/localisation/_geacps_countries_l_english.yml
+++ b/localisation/_geacps_countries_l_english.yml
@@ -77,10 +77,10 @@
  ISR_state:0 "イスラエル国"
  ISR_state_DEF:0 "イスラエル国"
  
- JAP_empire:0 "大日本帝国"
- JAP_empire_DEF:0 "大日本帝国"
- JAP_state:0 "日本国"
- JAP_state_DEF:0 "日本国"
+ JAP_empire:0 "大日本帝國"
+ JAP_empire_DEF:0 "大日本帝國"
+ JAP_state:0 "日本國"
+ JAP_state_DEF:0 "日本國"
  
  JOR_kingdom:0 "ヨルダン王国"
  JOR_kingdom_DEF:0 "ヨルダン王国"
