--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -175,6 +175,7 @@
  STATE_444:0 "バローチスターン"
  STATE_445:0 "カタガン＝バダフシャーン"
  STATE_516:0 "タイミル・ドルガン＝ネネツ"
+ STATE_524:0 "澎湖"
  STATE_528:0 "長崎"
  STATE_529:0 "廣島"
  STATE_530:0 "高松"
@@ -640,3 +641,10 @@
  STATE_1188:0 "シーサイン"
  STATE_1189:0 "ホポン"
  STATE_1190:0 "ピンライン"
+ STATE_1191:0 "高雄"
+ STATE_1192:0 "台東"
+ STATE_1193:0 "台南"
+ STATE_1194:0 "花蓮港"
+ STATE_1195:0 "台中"
+ STATE_1196:0 "新竹"
+ STATE_1197:0 "台北"
