--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -305,7 +305,6 @@
  VICTORY_POINTS_4052:0 "平壌"
  VICTORY_POINTS_4056:0 "釜山"
  VICTORY_POINTS_7125:0 "京城"
- VICTORY_POINTS_7186:0 "台北"
  VICTORY_POINTS_10433:0 "ハルピン"
  VICTORY_POINTS_11771:0 "奉天"
  VICTORY_POINTS_10265:0 "マニラ"
@@ -569,7 +568,6 @@
  VICTORY_POINTS_11833:0 "リヴォルノ"
  VICTORY_POINTS_11846:0 "アンツィオ"
  VICTORY_POINTS_12003:1 "バレッタ"
- VICTORY_POINTS_12068:0 "高雄"
  VICTORY_POINTS_12725:0 "ポートスーダン"
  VICTORY_POINTS_12732:0 "蘭州"
  VICTORY_POINTS_12758:0 "メディナ"
@@ -983,3 +981,8 @@
  VICTORY_POINTS_13274:0 "ディウ"
  VICTORY_POINTS_13275:0 "カーライッカール"
  VICTORY_POINTS_13276:0 "ヤナム"
+ 
+#台湾
+ VICTORY_POINTS_7186:0 "台北"
+ VICTORY_POINTS_11914:0 "高雄"
+ VICTORY_POINTS_11959:0 "台中"
