--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -981,6 +981,7 @@
  VICTORY_POINTS_13274:0 "ディウ"
  VICTORY_POINTS_13275:0 "カーライッカール"
  VICTORY_POINTS_13276:0 "ヤナム"
+ VICTORY_POINTS_3422:0 "チャンネル諸島"
  
 #台湾
  VICTORY_POINTS_7186:0 "台北"
