--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -176,6 +176,7 @@
  STATE_445:0 "カタガン＝バダフシャーン"
  STATE_516:0 "タイミル・ドルガン＝ネネツ"
  STATE_524:0 "澎湖"
+ STATE_525:0 "京城"
  STATE_528:0 "長崎"
  STATE_529:0 "廣島"
  STATE_530:0 "高松"
@@ -652,3 +653,5 @@
  STATE_1199:0 "全羅"
  STATE_1200:0 "慶尚"
  STATE_1201:0 "忠清"
+ STATE_1202:0 "京畿"
+ STATE_1203:0 "江原"
