--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -982,6 +982,7 @@
  VICTORY_POINTS_13275:0 "カーライッカール"
  VICTORY_POINTS_13276:0 "ヤナム"
  VICTORY_POINTS_3422:0 "チャンネル諸島"
+ VICTORY_POINTS_1822:0 "マハーバード"
  
 #台湾
  VICTORY_POINTS_7186:0 "台北"
