--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -8,7 +8,7 @@
  JAP_Draft_budget:0 "予算案"
  JAP_Re-exclusion_of_imperialists:0 "皇道派を再排除"
  JAP_Agrarian_watchdog:0 "農本主義者の監視"
- JAP_Naval_officer's_purge:0 "海軍士官の粛軍"
+ JAP_Naval_officer_s_purge:0 "海軍士官の粛軍"
  JAP_Stability_of_the_situation:0 "事態の安定"
  JAP_Economy:0 "経済"
  JAP_Military:0 "軍事"
@@ -28,6 +28,7 @@
  JAP_Oni_no_Kantaro:0 "鬼の貫太郎"
  JAP_Five_Reform_Directives:0 "五大改革指令"
  JAP_The_Three_Arrows:0 "三本の矢"
+ JAP_Suzuki_Nomics:0 "鈴木ノミクス"
  JAP_Suzuki_and_Anan:0 "鈴木と阿南"
  JAP_Civilian_System:0 "文民統制"
  JAP_Exclusively_Defense-Oriented_Policy:0 "専守防衛"
@@ -52,7 +53,6 @@
  JAP_Establishment_of_the_Chief_of_the_Supreme_Command:0 "最高幕僚長の設置"
  JAP_Miao_Pin_route:0 "援繆ルート"
  JAP_The_Koiso-Miao_Pin_Agreement:0 "小磯・繆斌協定"
- JAP_Alaskan_Expedition:0 "アラスカ出兵"
  JAP_Formation_of_the_Governing_Board_of_the_United_States_of_America:0 "亜米利加統治委員会の発足"
  JAP_Dealing_with_a_dying_sick_man_on_the_other_side_of_the_river:0 "対岸の瀕死の病人に対処"
  JAP_Expanded_governance_to_all_of_sub_America:0 "亜米利加全土に統治を拡大"
